[package]
name = "sqlmd"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.5.13", features = ["runtime-tokio-rustls", "sqlite"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.97", features = ["derive"] }
crc32fast = { version = "1.3.2" }
thiserror = { version = "1.0.31" }
sha2 = { version = "0.10.2" }